src/components/background/todos_background.module.scss
.bg_list {
  position: fixed;
  left: 0;
  top: 0;
  // opacity: .5;
  height: 100vh;
  width: 100vw;
  pointer-events: none;
  z-index: -1;

  &::before {
    position: absolute;
    content: '';
    background: rgba($color: #000000, $alpha: .1);
    width: 100%;
    height: 100%;
  }
}

.todo_bg_ul {
  display: flex;
  position: relative;
  top: -5px;
  padding: 0;
  margin: 0;
  list-style: none;

  li {
    font-size: 16px;
    font-family: monospace;
    margin: 0;
    padding: 10px;
    line-height: 30px;
    word-break: break-all;
  }
}

.solid_lines {
  background-image: linear-gradient(#ccc 1px, transparent 1px);
  background-size: 100% 30px;
}

